--- a/2018_front/2B/solve.html
+++ b/2018_front/2B/solve.html
@@ -1861,10 +1861,6 @@ if(_borschik('c4rIK')) {
     --font-regular: arialregular, Arial, Helvetica, sans-serif;
 }
 
-.fact {
-    --color-green-url: #f00;
-}
-
 /* ../../blocks-desktop/css-const/__common/css-const__common.css end */
 /* ../../node_modules/islands/common.blocks/button2/button2.css begin */
 /**
@@ -3932,6 +3928,7 @@ a.link_disabled_yes:visited {
 /* ../../blocks-common/serp-list/_left/serp-list_left_yes.styl begin */
 .serp-list_left_yes {
     margin: 0;
+    list-style-type: none;
     padding: 0;
 }
 .serp-list_left_yes .serp-item {
@@ -4811,10 +4808,6 @@ a.link_disabled_yes:visited {
     font-weight: bold;
 }
 .related__item b {
-    font-weight: normal;
-}
-
-.fact-layout b {
     font-weight: normal;
 }
 
@@ -7220,6 +7213,7 @@ Ya.Rum.sendRaf(85); // 85 – p0
     background: #f3f1ed;
     padding-top: 20px;
     margin: 0;
+    padding-left: 30px;
 }
 .fact__thumb {
     float: right;
@@ -7360,10 +7354,6 @@ Ya.Rum.sendRaf(85); // 85 – p0
 .fact__answer {
     padding-top: 0.2ex;
     padding-bottom: 0.2ex;
-}
-
-.i-bem {
-    position: absolute;
 }
 
 .fact__answer.typo_text_xl + .fact__description {
@@ -7705,10 +7695,6 @@ Ya.Rum.sendRaf(85); // 85 – p0
     right: -1px;
     bottom: -1px;
     left: -1px;
-}
-
-[class*=i-be] {
-    position: absolute;
 }
 
 .input_type_textarea.input_disabled_yes .input__control {
