--- a/2018_front/2D/index.html
+++ b/2018_front/2D/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="container" style="width: 300px; height: 50px"></div>
+<div id="container" style="width: 800px;height: 20px;font-size: 12px;"></div>
 
 <script src="js.js"></script>
 </body>
